<resources>
    <string name="app_name">Lifect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lifect</string>
    <string name="nav_header_subtitle">Training app</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_training">Trainings</string>
    <string name="menu_muscle">Muscles</string>
    <string name="menu_exercise">Exercises</string>

    <string name="home_second">Home Second</string>
</resources>
