<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_training"
            android:icon="@drawable/ic_menu_training"
            android:title="@string/menu_training" />
        <item
            android:id="@+id/nav_muscle"
            android:icon="@drawable/ic_menu_muscle"
            android:title="@string/menu_muscle" />
        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/ic_exercise"
            android:title="@string/menu_exercise" />
    </group>
</menu>
